Fix header link spacing

--- a/components/HeaderMenu.module.css
+++ b/components/HeaderMenu.module.css
@@ -120,8 +120,7 @@
   }
 
   .menu ul li a {
-    font-size: 1.5rem;
-    padding: 0;
-    margin: 0.5rem;
+    font-size: 1.2rem;
+    padding: 0.25rem 0.75rem;
   }
 }
